* Fixed bug where JSFPhaseListener was resetting the UIViewRoot even if the view did not change as 
  part of a resubmission.
* Added support for populating the FlowExecution inputMap from ExternalContext attributes during a launch operation.
  This allows for a flow to be passed input from clients that start it, and subsequently
  map the input into its local scope using a input-mapper.
  
Package org.springframework.webflow.registry
* Improved ExternalizedFlowRegistrar, extracting a factory method for creating an ExternalizedFlowDefinition
  from a valid Resource location, and a template method for calculating if the location is actually a flow resource.
* Fixed a bug in AbstractFlowRegistryFactoryBean where a NPE would occur when configuring custom DefaultFlowServiceLocator services.
* Generally improved pluggability of core FlowBuilder services with the AbstractFlowRegistryFactoryBean,
  including the FlowArtifactFactory, BeanInvokingActionFactory, ExpressionParser, and parent ConversionService implementations.

Package org.springframework.webflow.support
* Improved TransitionExecutingStateExceptionHandler to consider exception superclasses in handler match.
* Improved TransitionExecutingStateExceptionHandler to expose exception "rootCause" as request scoped attribute
* Changed "handledStateException" attribute to simply "stateException".
* Fixed bug in DefaultExpressionParserFactory where Ognl would be loaded before explict classpath check.

Package org.springframework.webflow.test
* Added flowExecution not null asserts to signalEvent and refresh AbstractFlowExecutionTests operations.
  
Changes in version 1.0 RC1 (03.5.2006)
------------------------------------

Package org.springframework.webflow
* Added explict Flow variable support to this package; see Flow.addVariable and Flow.start
* Fixed a bug in ParameterMap related to multi-valued parameter access